<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OperatorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSimpleActivity"
            android:text="@string/simple"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startOnStartActivity"
            android:text="@string/on_start"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDistinctUntilChangedActivity"
            android:text="@string/distinct_until_changed"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startOnCompletionActivity"
            android:text="@string/on_completion"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMapActivity"
            android:text="@string/map"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startScanReduceActivity"
            android:text="@string/scan_reduce"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatMapConcatActivity"
            android:text="@string/flat_map_concat"
            android:textColor="@android:color/black" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatMapMergeActivity"
            android:text="@string/flat_map_merge"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlattenConcatFlowActivity"
            android:text="@string/flatten_concat_flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMergeFlowActivity"
            android:text="@string/merge_flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatterMergeFlowActivity"
            android:text="@string/flatten_merge_flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTransformLatestFlowActivity"
            android:text="@string/transform_latest_flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatMapLatestFlowActivity"
            android:text="@string/flat_map_latest_flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterActivity"
            android:text="@string/filter"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterNotActivity"
            android:text="@string/filter_not"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterIsInstanceFlowActivity"
            android:text="@string/filter_is_instance"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterNotNullFlowActivity"
            android:text="@string/filter_not_null"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startZipActivity"
            android:text="@string/zip"
            android:textColor="@android:color/black"
            tools:ignore="OnClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSingleNetworkCallActivity"
            android:text="@string/single_network_call"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSeriesNetworkCallsActivity"
            android:text="@string/series_network_calls"
            android:textColor="@android:color/black" />

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startParallelNetworkCallsActivity"-->
<!--            android:text="@string/parallel_network_calls"-->
<!--            android:textColor="@android:color/black" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startRoomDatabaseActivity"-->
<!--            android:text="@string/room_database"-->
<!--            android:textColor="@android:color/black" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startCatchActivity"-->
<!--            android:text="@string/catch_error"-->
<!--            android:textColor="@android:color/black" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startEmitAllActivity"-->
<!--            android:text="@string/emit_all_error"-->
<!--            android:textColor="@android:color/black" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startCompletionActivity"-->
<!--            android:text="@string/completion"-->
<!--            android:textColor="@android:color/black" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startLongRunningTaskActivity"-->
<!--            android:text="@string/long_running_task"-->
<!--            android:textColor="@android:color/black" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startTwoLongRunningTasksActivity"-->
<!--            android:text="@string/two_long_running_tasks"-->
<!--            android:textColor="@android:color/black" />-->


<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startReduceActivity"-->
<!--            android:text="@string/reduce"-->
<!--            android:textColor="@android:color/black" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="startSearchActivity"-->
<!--            android:text="@string/search"-->
<!--            android:textColor="@android:color/black" />-->

    </LinearLayout>
</ScrollView>